# outdated

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
outdated/: __init__.py  mywarnings.py  utils.py
