[metadata]
name = outdated
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Check if a version of a PyPI package is outdated
url = http://github.com/alexmojaki/outdated
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[options]
packages = outdated
install_requires =
    setuptools>=44
    littleutils
    requests

setup_requires = setuptools; setuptools_scm[toml]
include_package_data = True

[bdist_wheel]
universal=1
